# scifinder-route-mcp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  README.zh-CN.md  config.example.yaml  docker-compose.image.yml  docker-compose.yml  pyproject.toml  webui-config.example.yaml
.github/workflows/: docker-image.yml
docs/: admin-webui.md  agent-playbook.md  architecture.md  deployment.md  sidecar.md
src/scifinder_route_mcp/: __init__.py  admin.py  auth.py  chem.py  config.py  extractor.py  integrations.py  literature.py  models.py  orm.py  parsers.py  rdfile.py  registry.py  server.py  service.py  sidecar.py  storage.py
src/scifinder_route_mcp/admin_webui/: __init__.py  index.html
tests/: test_evidence_classifier.py  test_import_preview_backfill.py  test_mvp.py  test_pdf_parsers_linking.py  test_reaction_link_review.py  test_storage_linking.py
tests/fixtures/: sample_scifinder_export.html  sample_scifinder_export.rdf  sample_scifinder_export.rtf  sample_scifinder_export_v2000.rdf
webui/: THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  vite.config.ts
webui/src/: App.tsx  api.ts  components.tsx  constants.ts  i18n.tsx  main.tsx  styles.css  types.ts
webui/src/components/: Breadcrumb.tsx  CollapsibleText.tsx  StatusBadge.tsx  StructureImage.tsx  Toast.tsx  app-sidebar.tsx
webui/src/pages/: ConfigPage.tsx  DashboardPage.tsx  DocumentDetailPage.tsx  DocumentsListPage.tsx  IngestPage.tsx  LiteraturePage.tsx  LoginScreen.tsx  OpsPage.tsx  RdfDetailPage.tsx  RdfPage.tsx  ReactionLinksPage.tsx  StructurePage.tsx
(+41 files in other folders)
