[project]
name = "scifinder-route-mcp"
version = "0.1.0"
description = "MCP server for indexing and searching reaction-step-level synthesis routes from local SciFinder exports."
requires-python = ">=3.10"
dependencies = [
  "fastmcp>=0.4.0",
  "beautifulsoup4>=4.12.0",
  "pymupdf>=1.24.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
scifinder-route-mcp = "scifinder_route_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
