[project]
name = "scifinder-route-mcp"
version = "0.1.0"
description = "MCP server for indexing and searching reaction-step-level synthesis routes from local SciFinder exports."
requires-python = ">=3.10"
dependencies = [
  "fastmcp>=2.0.0",
  "beautifulsoup4>=4.12.0",
  "pymupdf>=1.24.0",
  "rdkit>=2024.3.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
chem = [
  # RDKit is installed by default for Docker/NAS deployments; this extra is kept
  # so older install commands using .[chem] continue to resolve.
]

[project.scripts]
scifinder-route-mcp = "scifinder_route_mcp.server:main"
scifinder-route-sidecar = "scifinder_route_mcp.sidecar:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scifinder_route_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
